<resources>
    <string name="app_name">My Exams</string>
    <string name="home">Дом</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="until_exams">До экзаменов осталось:</string>
    <string name="lessons">Уроки</string>
    <string name="homework">Домашнeе заданиe</string>
    <string name="colon">:</string>
    <string name="open_in">Open in</string>
    <string name="profile">Профиль</string>
    <string name="favorite">Нравится</string>
    <string name="days">Дней</string>
    <string name="hours">Часов</string>
    <string name="minutes">Минут</string>
</resources>