<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:outlineAmbientShadowColor="#31F8E8"
    android:outlineSpotShadowColor="#51FA53"
    app:cardCornerRadius="24dp"
    app:cardElevation="16dp"
    app:cardUseCompatPadding="true"
    tools:targetApi="p">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/exams_background"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:text="@string/until_exams"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginVertical="16dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/timer_days_first"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="2dp"
                        android:background="@drawable/timer_background"
                        android:paddingHorizontal="8dp"
                        android:textColor="@color/white"
                        android:textSize="40sp"
                        tools:text="0" />

                    <TextView
                        android:id="@+id/timer_days_second"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="2dp"
                        android:background="@drawable/timer_background"
                        android:paddingHorizontal="8dp"
                        android:textColor="@color/white"
                        android:textSize="40sp"
                        tools:text="0" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/days"
                    android:textColor="@color/white" />


            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:includeFontPadding="false"
                android:text="@string/colon"
                android:textColor="@color/white"
                android:textSize="48sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/timer_hours_first"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="2dp"
                        android:background="@drawable/timer_background"
                        android:paddingHorizontal="8dp"
                        android:textColor="@color/white"
                        android:textSize="40sp"
                        tools:text="0" />

                    <TextView
                        android:id="@+id/timer_hours_second"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="2dp"
                        android:background="@drawable/timer_background"
                        android:paddingHorizontal="8dp"
                        android:textColor="@color/white"
                        android:textSize="40sp"
                        tools:text="0" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hours"
                    android:textColor="@color/white" />


            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:includeFontPadding="false"
                android:text="@string/colon"
                android:textColor="@color/white"
                android:textSize="48sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/timer_minute_first"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="2dp"
                        android:background="@drawable/timer_background"
                        android:paddingHorizontal="8dp"
                        android:textColor="@color/white"
                        android:textSize="40sp"
                        tools:text="0" />

                    <TextView
                        android:id="@+id/timer_minute_second"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="2dp"
                        android:background="@drawable/timer_background"
                        android:paddingHorizontal="8dp"
                        android:textColor="@color/white"
                        android:textSize="40sp"
                        tools:text="0" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/minutes"
                    android:textColor="@color/white" />


            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>